<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventFragment"
    android:padding="16dp">

    // Edit text for event name
    <EditText
        android:id="@+id/editText_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    // Button to select Event Date
    <Button
        android:id="@+id/button_select_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/select_date_button_text"
        app:layout_constraintTop_toBottomOf="@id/editText_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    // Button to select event time
    <Button
        android:id="@+id/button_select_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/select_time_button_text"
        app:layout_constraintTop_toBottomOf="@id/button_select_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    // Button to save event
    <Button
        android:id="@+id/button_save_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_event_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>