<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="uk.ac.hope.mcse.android.coursework.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
            
        <action
            android:id="@+id/action_FirstFragment_to_RespondFragment"
            app:destination="@id/RespondFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="uk.ac.hope.mcse.android.coursework.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/RespondFragment"
        android:name="uk.ac.hope.mcse.android.coursework.RespondFragment"
        android:label="@string/friend_response_fragment_label"
        tools:layout="@layout/fragment_respond">

        <action
            android:id="@+id/action_RespondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="true" />

    </fragment>

</navigation>